--- a/style.css
+++ b/style.css
@@ -40,6 +40,19 @@ body {
     margin: 0px auto;
     cursor: pointer;
 }
+.prestige-circle {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: greenyellow;
+    color: black;
+    font-size: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0px auto;
+    cursor: pointer;
+}
 .line {
     width: 10px;
     height: 20px;
