--- a/style.css
+++ b/style.css
@@ -85,3 +85,14 @@ button {
 button:disabled {
     cursor: not-allowed;
 }
+.milestone {
+    margin: 15px 0;
+    padding: 10px;
+    background-color: #444;
+    border-radius: 5px;
+    color: white;
+    text-align: center;
+}
+.milestone p {
+    margin: 5px 0;
+}
